fatplant/src/app/components/pages/datapages/protein-details-new/protein-details-new.component.scss
@import "~src/variables.scss";

mat-card {
  font-family: "PT Sans", sans-serif;
  width: 100%;
  height: auto;
  background-image: none !important;
  background-color: white;
  margin: 0;
  padding: 0% !important;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

#protein-page {
  min-height: calc(94% - 32px);
  background-color: white;
}

.protein-name {
  padding-left: 5%;
  font-size: 20px;
}

.protein-info-card {
  width: 52%;
  margin-top: 1%;
  background-color: #FDFAF0;
  border-radius: 5px;
  box-shadow: 0 1px 4px;
}

.protein-info {
  margin-top: 0;
}

.protein-subtitle {
  color: #205434;
}

.no-data-message {
  margin: auto;
  text-align: center;
  padding-top: 5vh;
}

.status {
  margin: 2vh 0 0.5vh 1%;
}

.status.reviewed {
  color: $light-green;
}

.status.unreviewed {
  color: $orange-yellow;
}

.sequence-card {
  width: 100%;
  margin-top: 3%;
  background-color: rgba(#86C786, 0.2);
  border-radius: 5px;
  box-shadow: 0 1px 4px;
  box-sizing: border-box;
}

.alt-names {
  margin: 0 0 0 1%;
  font-size: 0.85em;
}

#mainContainer {
  margin: 10px auto;
  width: 70%;
}

a {
  text-decoration: none;
  color: $light-green;
}

a:visited,
a:visited {
  color: $dark-green;
}

.function-header {
  display: flex;
  justify-content: space-between;
  max-height: 50px;
}

.function-header>h3 {
  margin-top: 0;
  margin-bottom: 10px;
}

.function-header>button {
  height: 35px;
}

.function-header>mat-form-field {
  font-size: 12px;
}

table.blueTable {
  border: 1px solid $main-green;
  background-color: #EEEEEE;
  width: 100%;
  text-align: left;
  border-collapse: collapse;
}

table.blueTable td,
table.blueTable th {
  border: 1px solid #AAAAAA;
  padding: 3px 2px;
}

table.blueTable tbody td {
  font-size: 13px;
}

table.blueTable tr:nth-child(even) {
  background: rgba($lime-green, 0.2);
}

table.blueTable thead {
  background: rgba($main-green, 0.4);
  border-bottom: 2px solid #444444;
}

table.blueTable thead th {
  font-size: 15px;
  font-weight: bold;
  color: #FFFFFF;
  border-left: 2px solid #D0E4F5;
}

table.blueTable thead th:first-child {
  border-left: none;
}

table.blueTable tfoot {
  font-size: 14px;
  font-weight: bold;
  color: #FFFFFF;
  background: #D0E4F5;
  background: -moz-linear-gradient(top, #DCEBF7 0%, #D4E6F6 66%, #D0E4F5 100%);
  background: -webkit-linear-gradient(top, #DCEBF7 0%, #D4E6F6 66%, #D0E4F5 100%);
  background: linear-gradient(to bottom, #DCEBF7 0%, #D4E6F6 66%, #D0E4F5 100%);
  border-top: 2px solid #444444;
}

table.blueTable tfoot td {
  font-size: 14px;
}

table.blueTable tfoot .links {
  text-align: right;
}

table.blueTable tfoot .links a {
  display: inline-block;
  background: #1C6EA4;
  color: #FFFFFF;
  padding: 2px 8px;
  border-radius: 5px;
}

/* Style the top navigation bar */
.topnav {
  overflow: hidden;
  background-color: #333;
}

/* Style the topnav links */
.topnav a {
  float: left;
  display: block;
  color: #F2F2F2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

/* Change color on hover */
.topnav a:hover {
  background-color: #ddd;
  color: black;
}

/* Create three unequal columns that floats next to each other */
.column {
  float: left;
  padding: 10px;
}

/* Left and right column */
.column.left {
  width: 15%;
  padding: 0;
}

.column.right {
  width: 20%;
}

/* Middle column */
.column.middle {
  width: 60%;
}

.column.middleright {
  width: 70%;
}

/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}

/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {

  .column.side,
  .column.middle {
    width: 100%;
  }
}

table,
td,
th {
  border: 1px solid #ddd;
  text-align: left;
}

table {
  border-collapse: collapse;
  width: 100%;
}

th,
td {
  padding: 15px;
}

textarea {
  width: 100%;
  min-height: 200px;
  font-family: monospace;
  word-break: break-all;
  border-radius: 10px;
  background: transparent;
}

#loading-bar {
  width: 60%;
  margin: auto;
  margin-top: 2%;
}

.centered {
  text-align: center;
  margin: auto;
}

#pathway-view {
  width: 100%;
  min-height: 600px;
  border: none;
}

#pathway-tabs {
  width: 80%;
  min-width: 910px;
}

.nav-item {
  color: grey;
  transition: color 0.5s;
}

.nav-item:hover {
  color: $light-green;
}

.active {
  color: black;
  transition: color 0.5s;
}

::ng-deep .mat-step .mat-step-header .mat-step-icon-selected {
  background-color: $lime-green;
  height: 24px !important;
  width: 24px !important;
  margin-left: 0px !important;
  transition: all 0.5s cubic-bezier(.35, 0, .25, 1);
}

::ng-deep .mat-step .mat-step-header .mat-step-icon {
  height: 12px;
  width: 12px;
  margin-left: 6px;
  transition: all 0.5s cubic-bezier(.35, 0, .25, 1);
}

#stepper {
  position: sticky;
  top: 20%;
}

#sequence-display {
  word-wrap: break-word;
  margin-top: 5px;
}

#pdb-loading-bar {
  width: 100%;
}

mat-header-cell {
  font-family: "PT Serif", serif;
  color: black;
  padding-right: 2%;
}

mat-header-row {
  border-bottom-color: rgba(grey, 0.5);
  font-size: 1.0vw;
  padding-top: 5%;
}

mat-row {
  border-bottom-color: $pale-green;
}

mat-cell {
  padding-right: 2%;
}

.sequence-header {
  display: flex;
  justify-content: space-between;
}

.sequence-header .header-content {
  display: flex;
  align-items: center;
}

.sequence-header h2 {
  margin-right: 50px; 
}

#sequence-button {
  color: white;
  background-color: #4caf50;
  box-sizing: border-box;
  border-style: solid;
  border-color: #4caf50;
  cursor: pointer;
  text-align: center;
  min-width: 64px; 
  line-height: 36px;
  padding: 0 16px;
  border-radius: 4px;
  font-family: Roboto, "Helvetica Neue", sans-serif;
  font-size: 14px;  
  font-weight: 500;
}

.green-button {
  transition: background-color 0.5s;
}

.green-button:hover {
  background-color: rgba($lime-green, 0.3);
  transition: all 0.5s;
}

.viewer-button {
  color: white;
}

.disabled-arrow {
  color: lightgrey;
}

.enabled-arrow {
  color: black;
  transition: color 0.3s;
}

.enabled-arrow:hover {
  color: $main-green;
  transition: color 0.3s;
  cursor: pointer;
}

#left-arrow {
  position: absolute;
  left: 10%;
  bottom: 0;
}

#right-arrow {
  position: absolute;
  right: 10%;
  bottom: 0;
}

#arrow-label {
  position: absolute;
  bottom: 0;
  left: 20%;
  width: 60%;
  text-align: center;
}

#arrow-wrapper {
  margin-top: 10px;
  height: 30px;
}

.pathway-radio-group {
  margin: auto;
  width: 100%;
  text-align: center;
  display: inline-block;
}

.pathway-label {
  width: 100%;
  display: inline-block;
  text-align: center;
}

.pathway-radio-button {
  margin: 5px;
}

#canvas-container {
  max-width: 90%;
  max-height: 100%;
  margin: auto;
  overflow: scroll;
}

#canvas {
  width: max-content;
  height: max-content;
}

.card-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
}

.protein-info-wrapper {
  margin-left: 2%;
}

.protein-function-card {
  width: 45%;
  min-height: 40%;
  margin-top: 1%;
  background-color: rgba(#F9F9F9, 0.7);
  border-radius: 5px;
  box-shadow: 0 1px 4px;
}

.domain-function-card {
  width: 100%;
  margin-top: 3%;
  background-color: rgba(#F9F9F9, 0.7);
  border-radius: 5px;
  box-shadow: 0 1px 4px;
  box-sizing: border-box;
}

.title {
  margin-left: 1%;
  margin-right: 1%;
  margin-top: 0;
  margin-bottom: 0;
  font-weight: normal;
}

.back-text {
  margin-left: 1vw;
}

.error {
  font-weight: normal;
}

.info-icon {
  font-size: 1em;
}

.alt-names {
  margin: 0 0 0 1%;
  font-size: 0.85em;
}

#mainContainer {
  margin: 10px auto;
  width: 95%;
}

a {
  text-decoration: none;
  color: $light-green;
}

a:visited,
a:visited {
  color: $dark-green;
}

#results {
  display: block;
  width: 100%;
  font-family: 'PT Sans', sans-serif;
}

.wrapper {
  display: flex;
  justify-content: space-between;
}

.main,
.sidebar {
  padding: 15px;
}

.main {
  width: 100%;
  background-color: white;
  font-family: 'Catamaran', sans-serif;
  margin: 0;
}

.header {
  height: 4rem;
  display: flex;
  justify-content: left;
  align-items: center;
  font-size: 2rem;
  background-color: #629B07;
  color: whitesmoke;
  padding-left: 40px;
}

mat-card.base {
  width: 100%;
  box-sizing: border-box;
  background-image: none !important;
  margin: 0 !important;
  padding: 0 !important;
}

:host {
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

:host ::ng-deep .mat-tab-labels{
  flex-direction: column;
  align-items: flex-start;
}

.mat-tab-label{
  justify-content: left;
}

.mat-tab-group {
  flex-grow: 1;
  display: flex;
  flex-direction: row;
}

:host ::ng-deep .mat-tab-body-wrapper {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
}

mat-tab-body {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
}

:host ::ng-deep mat-ink-bar {
  display: none;
}

